--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,8 @@ sysinfo.txt
 ehthumbs.db
 [Tt]humbs.db
 
-# ================== #
-# Taylor's additions #
-# ================== #
-*.meta
+# Unity3D generated meta files
+*.pidb.meta
+
+# Unity3D Generated File On Crash Reports
+sysinfo.txt
